fix: image markdown & scrollbar
- image markdown 的图片链接中如果包含其它字符会无法命中
- 滚动条在视窗大小改变后无法正确响应
- 删除操作后将滚动到光标位置处

--- a/plugins/table/src/index.css
+++ b/plugins/table/src/index.css
@@ -18,6 +18,14 @@ div[data-card-key="table"].card-selected .data-table, div[data-card-key="table"]
   background: transparent
 }
 
+.am-engine [data-card-key="table"].card-selected [data-card-element="center"].data-card-background-selected {
+    background: transparent;
+}
+
+.am-engine [data-card-key="table"].card-selected [data-card-element="center"].data-card-background-selected .table-wrapper {
+    background: rgba(27, 162, 227, 0.2);
+}
+
 .am-engine-mobile div[data-card-key="table"].card-activated {
   margin-left: 20px;
 }
